[project]
name = "langchain-toolbox"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=7.1.0",
    "langchain>=1.2.2",
    "langchain-openai>=1.1.7",
    "langgraph>=1.0.5",
    "mcp>=1.25.0",
    "python-dotenv>=1.2.1",
    "toolbox-langchain>=0.5.5",
]
